--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "nilportugues/json-api": "^2.4"
     },
     "require-dev": {
-        "symfony/symfony": "^2.0|^3.0",
+        "symfony/symfony": "^2.0|^3.0|^4.0",
         "friendsofphp/php-cs-fixer": "^1.9",
         "nilportugues/php_backslasher": "^0.2"
     },
